Mon Mar  3 14:57:35 1997  Ezra Peisach  <epeisach@mit.edu>

	* error_message.c: Don't declare sys_nerr on Macintosh.

	* com_err.c: Fix MacMessageBox prototype.

Sat Mar  1 11:54:02 1997  Sam Hartman  <hartmans@luminous.MIT.EDU>

	* com_err.h: Do not declare com_err_hook extern if you want it
 	static in the source file. [383]
	

Sat Feb 22 12:18:47 1997  Richard Basch  <basch@lehman.com>

	* Makefile.in: Move list file construction to win-post.in

	* et_c.awk et_h.awk error_message.c com_err.c:
		Put back #ifdef unix, and also based it on AIX.
		We do NOT want the compatibility interface on any new
		architectures.  Since we have distributed Kerberos on
		AIX before, we need it there.  If newer Unix systems
		lack the #define, so be it... it doesn't matter.

Sat Feb 22 02:18:47 1997  Sam Hartman  <hartmans@tertius.mit.edu>

	* et_h.awk (char_shift): Avoid #ifdef unix
	* error_message.c: Remove #ifdef unix
	* com_err.c: Remove #ifdef unix

Sat Feb 22 00:34:05 1997  Sam Hartman  <hartmans@luminous.MIT.EDU>

	* Makefile.in (LIBMAJOR):  Bump to 3 so that the krb5 lib is preferred to the NetBSD system library.

Fri Feb 14 13:55:45 1997  Richard Basch  <basch@lehman.com>

	* com_err.c com_err.h error_message.c error_table.h et_c.awk et_h.awk:
		Removed experimental V2 API
		Added table register/deregister functions
		Only make the com_err_hook vars/funcs available on Unix
		Only expose _et_list on Unix

Tue Feb 11 13:31:49 1997  Richard Basch  <basch@lehman.com>

	* com_err.c: If the application is a console application, simply
		display the message to stderr. (win32)

Mon Feb 10 21:30:41 1997  Theodore Y. Ts'o  <tytso@mit.edu>

	* com_err.c, com_err.h (com_err_va): Fix broken Windows 16
		declaration.  (Should be KRB5_CALLCONV, and using ET_P)

Fri Feb  7 22:10:23 1997  Theodore Y. Ts'o  <tytso@mit.edu>

	* compile_et.c: Change the emitted name of the struct error_table
 		to be et_XXX_error_table, instead of it being a static